优化一些界面相关的渲染UI和布局问题。